Changelog for JVCL 3.0
======================
2004-07-22
- Fixed: JvComCtrls.TJvTreeView tree nodes do not keep their checked state when set before the first WM_PAINT event // ahuser
- Improved: JvComCtrls.TJvIPAddress now supports the TAB for each field. Property TabThroughFields controls this feature // ahuser
- Class hierarchy changed: JvComCtrls.TJvIPAddress now inherits from TJvCustomControl instead of TJvWinControl // ahuser
- Fixed: JvComCtrls.TJvIPAddress now changes the controls's background. // ahuser
- Fixed: JvCtrls.TJvCustomImageButton has ignored Alignment. // ahuser
2004-07-21
- TJvDesktopAlert now has styles, use the StyleOptions property to define the parameters // obones
- TJvDesktopAlert can now use the Grow From Center grow // obones
- Introduced TJvDesktopAlert.StyleOptions.StartSteps and EndSteps to control the number of
  steps in the start and end animations // obones
- TJvDesktopAlert.FadeInTime is replaced by TJvDesktopAlert.StyleOptions.StartInterval // obones
- TJvDesktopAlert.FadeOutTime is replaced by TJvDesktopAlert.StyleOptions.EndInterval // obones
- TJvDesktopAlert.WaitTime is replaced by TJvDesktopAlert.StyleOptions.DisplayDuration // obones
- TJvDesktopAlert.AlphaBlendValue is removed, use TJvDesktopAlert.StyleOptions.CurrentStep // obones
2004-07-13
- TJvStrToHtml now always encodes known special characters as HTML named entities. 
  It still understands numerical entities when decoding  // obones
- TJvDateEdit now has a published Date property  // obones
2004-06-26
- Added Flat property to combo edits, replaces Ctl3D // remkobonte
2004-06-13
- TJvCipher is renamed to TJvCustomCipher as it is a base class  // obones
- IsStored is introduced in TJvCustomCipher to control if Encoded and Key are stored // obones
2004-06-12
- Reimplemented Key, Encoded and Decoded in the ciphers // obones
2004-06-11
- Added Embedded Forms donation from "rossen" (in JvEmbeddedForms.pas and the JvAppFrm package) // peter3
2004-06-02